k8_prod/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rewrite
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 break
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  namespace: default
spec:
  tls:
    - hosts:
        - ssemail.info
        - www.ssemail.info
      secretName: k8s-sslv-com
  rules:
    - host: ssemail.info
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.ssemail.info
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
